Corrected row overflow
Rows were suddenly overflowing out of the table, perhaps due to the refactoring and reorganising of code.

--- a/ClientApp/css/home.css
+++ b/ClientApp/css/home.css
@@ -167,40 +167,3 @@
         opacity: 1;
     }
 }
-
-/* EXPLORER STYLING */
-.loadingGif {
-    text-align: center;
-    align-content: center;
-    font-family: 'europa', sans-serif;
-    font-style: normal;
-    position: fixed;
-    left: 0;
-    right: 0;
-}
-
-.pull-down {
-    margin-top: 55px;
-    margin-left: 5px;
-    margin-right: 5px;
-    position: fixed;
-    height: calc(100vh - 65px);
-}
-
-.table {
-    table-layout: fixed;
-}
-
-tr {
-    width: 100%;
-    display: inline-table;
-    table-layout: fixed;
-}
-
-tbody {
-    overflow-y: scroll;
-    overflow-x: hidden;
-    height: calc(100vh - 250px);
-    position: absolute;
-    margin-right: 24px;
-}
