--- a/ClientApp/css/singleLogin.css
+++ b/ClientApp/css/singleLogin.css
@@ -1,6 +1,7 @@
-﻿body {
+﻿.body {
     margin-left: auto;
     margin-right: auto;
+    height: calc(100% - 120px);
 }
 
 .header {
